--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "mini-css-extract-plugin": "^1.3.4",
     "portfinder-sync": "0.0.2",
     "raw-loader": "^4.0.2",
+    "stats.js": "^0.17.0",
+    "statsjs": "^1.0.7",
     "style-loader": "^2.0.0",
     "three": "^0.124.0",
     "webpack": "^5.14.0",
